fix: strm-425 larger asterisk and center aligned placement (#68)
strm-425: larger asterisk placement and center aligned placement

--- a/src/components/Register/RegisterForm/RegisterForm.scss
+++ b/src/components/Register/RegisterForm/RegisterForm.scss
@@ -55,11 +55,16 @@
     content: ' *';
     display:inline;
     position: absolute;
-    left: 425px;
+    top: 24px;
+    left: 430px;
+    transform: scale(2);
     color: $red;
+    size: 10px;
   }
 
   &__required-asterisk {
+    vertical-align: sub;
+    font-size: 15px;
     color: $red;
   }
 
